networking/virtual-services.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gitlab-ui-virtual-service
spec:
  hosts:
    - "gitlab.kube.dev"
  gateways:
    - public-gateway.istio-system.svc.cluster.local
  http:
    - route:
      - destination:
          host: gitlab-unicorn.gitlab.svc.cluster.local
          port:
            number: 8181
      match:
      - url:
          prefix: /
      websocketUpgrade: true
    - match:
      - uri:
          prefix: /admin/sidekiq
      route:
      - destination:
          host: gitlab-unicorn.gitlab.svc.cluster.local
          port:
            number: 8080

---

# TODO: Need this until we get some sidecar injection going
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: gitlab-ui
spec:
  host: gitlab-unicorn.gitlab.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE

---

# TODO: Need this until we get some sidecar injection going
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: gitlab-ssh
spec:
  host: gitlab-unicorn.gitlab.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
